<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/preferences" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefs_home_display_adress_value"
            android:title="@string/prefs_stations_details_title"
            android:summary="@string/prefs_stations_details_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/location" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefs_localisation_gps_activated_value"
            android:title="@string/prefs_location_enable_gps_title"
            android:summary="@string/prefs_location_enable_gps_summary"
            />
    </PreferenceCategory>
</PreferenceScreen>