<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/home_nostations_nfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/stars_nostations_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/no_station" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stars_nostations_message"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/numberDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/stations_list"
                android:scaleType="fitStart"
                android:src="@drawable/view_as_list" />

            <ImageView
                android:id="@+id/daysText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/stations_map"
                android:scaleType="fitStart"
                android:src="@drawable/map" >
            </ImageView>
        </LinearLayout>
    </RelativeLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/stars_pull_refresh_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:cacheColorHint="#00000000"
	    android:fadingEdge="none"
        android:fastScrollEnabled="true"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:smoothScrollbar="true" />

</LinearLayout>